<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    xmlns:android="http://schemas.android.com/apk/res/android">
       <LinearLayout android:layout_height="match_parent"
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_gravity="center"

           xmlns:android="http://schemas.android.com/apk/res/android">


           <ImageView
               android:layout_width="match_parent"
               android:layout_height="400px"

               android:src="@drawable/logo"/>
           <TextView
               android:layout_width="match_parent"
               android:gravity="center"
               android:textColor="@color/black"
               android:textStyle="italic"
               android:textSize="15dp"
               android:text="@string/app_name"
               android:layout_height="wrap_content"/>


           <EditText
               android:hint="@string/username"
               android:id="@+id/uname"
               android:drawableLeft="@drawable/username"
               android:drawablePadding="10dp"
               android:textColor="@color/black"
               android:textColorHint="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"

               />
           <EditText
               android:hint="@string/password"
               android:inputType="number"
               android:id="@+id/pass"
               android:drawableLeft="@drawable/password"
               android:drawablePadding="10dp"
               android:textColor="@color/black"
               android:textColorHint="@color/black"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"

               />
           <androidx.appcompat.widget.AppCompatButton
               android:text="@string/login"
               android:textSize="50px"
               android:background="@drawable/radius"
               android:layout_margin="10dp"
               android:layout_width="match_parent"
               android:onClick="loginbtnclick"
               android:layout_height="wrap_content"/>

           <androidx.appcompat.widget.AppCompatButton
               android:text="@string/register"
               android:textSize="50px"
               android:layout_margin="10dp"
               android:background="@drawable/radius"
               android:onClick="registerbtnclick"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>



       </LinearLayout>

   </ScrollView>